# outside-in

./: .ocamlformat  dune-project  outside-in.opam
lib/: Logging.ml  Prelude.ml  Pretty.ml  Rules.ml  Syntax.ml  dune
lib/TypeChecker/: Entail.ml  Env.ml  Infer.ml  Solver.ml  Unify.ml  Utils.ml
